src/test/deca/context/invalid/equals-noParam.context
equals-noParam.deca:2:
